@@ -11,6 +11,7 @@ package de.jost_net.JVerein.io;
 // 20220804 : sbuer: Erstes Release
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.rmi.RemoteException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -386,17 +387,17 @@ public class AbrechnungSEPA_hbci4java {
 	        {
 	          list.addFilter(
 	              "(zahlungsrhytmus = ? or zahlungsrhytmus = ? or zahlungsrhytmus = ?)",
-	                  new Object[] { new Integer(Zahlungsrhythmus.HALBJAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.VIERTELJAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.MONATLICH) });
+	                  new Object[] { Integer.valueOf(Zahlungsrhythmus.HALBJAEHRLICH),
+	                  Integer.valueOf(Zahlungsrhythmus.VIERTELJAEHRLICH),
+	                  Integer.valueOf(Zahlungsrhythmus.MONATLICH) });
 	        }
 	        if (param.abbuchungsmodus == Abrechnungsmodi.JAVIMO)
 	        {
 	          list.addFilter(
 	              "(zahlungsrhytmus = ? or zahlungsrhytmus = ? or zahlungsrhytmus = ?)",
-	                  new Object[] { new Integer(Zahlungsrhythmus.JAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.VIERTELJAEHRLICH),
-	                  new Integer(Zahlungsrhythmus.MONATLICH) });
+	                  new Object[] { Integer.valueOf(Zahlungsrhythmus.JAEHRLICH),
+	                  Integer.valueOf(Zahlungsrhythmus.VIERTELJAEHRLICH),
+	                  Integer.valueOf(Zahlungsrhythmus.MONATLICH) });
 	        }
 	        if (param.abbuchungsmodus == Abrechnungsmodi.VIMO)
 	        {
@@ -542,7 +543,7 @@ public class AbrechnungSEPA_hbci4java {
 	        zahler.setPersonId(m.getID());
 	        zahler.setPersonTyp(JVereinZahlerTyp.MITGLIED);
 	        zahler.setBetrag(
-	            new BigDecimal(betr).setScale(2, BigDecimal.ROUND_HALF_UP));
+	            new BigDecimal(betr).setScale(2, RoundingMode.HALF_UP));
 	        new BIC(m.getBic()); // Prüfung des BIC
 	        zahler.setBic(m.getBic());
 	        new IBAN(m.getIban()); // Prüfung der IBAN
@@ -638,7 +639,7 @@ public class AbrechnungSEPA_hbci4java {
 	            zahler.setPersonId(m.getID());
 	            zahler.setPersonTyp(JVereinZahlerTyp.MITGLIED);
 	            zahler.setBetrag(new BigDecimal(z.getBetrag()).setScale(2,
-	                BigDecimal.ROUND_HALF_UP));
+	                RoundingMode.HALF_UP));
 	            new BIC(m.getBic());
 	            new IBAN(m.getIban());
 	            zahler.setBic(m.getBic());
@@ -719,7 +720,7 @@ public class AbrechnungSEPA_hbci4java {
 	        zahler.setPersonId(kt.getID());
 	        zahler.setPersonTyp(JVereinZahlerTyp.KURSTEILNEHMER);
 	        zahler.setBetrag(new BigDecimal(kt.getBetrag()).setScale(2,
-	            BigDecimal.ROUND_HALF_UP));
+	            RoundingMode.HALF_UP));
 	        new BIC(kt.getBic());
 	        new IBAN(kt.getIban());
 	        zahler.setBic(kt.getBic());
@@ -922,7 +923,7 @@ public class AbrechnungSEPA_hbci4java {
 	      }
 	      if (buchungsart != null)
 	      {
-	        buchung.setBuchungsart(new Long(buchungsart.getID()));
+	        buchung.setBuchungsart(Long.valueOf(buchungsart.getID()));
 	      }
 	      buchung.store();
 	    }
