@@ -83,9 +83,9 @@ public class BuchungsklasseSaldoZeile implements GenericObject {
     this.buchungsart = buchungsart;
     this.text = null;
     this.text_buchungsart = null;
-    this.umbuchungen = new Double(umbuchungen);
-    this.einnahmen = new Double(einnahmen);
-    this.ausgaben = new Double(ausgaben);
+    this.umbuchungen = Double.valueOf(umbuchungen);
+    this.einnahmen = Double.valueOf(einnahmen);
+    this.ausgaben = Double.valueOf(ausgaben);
   }
 
   public BuchungsklasseSaldoZeile(int status, String text, Double einnahmen, Double ausgaben,
@@ -95,9 +95,9 @@ public class BuchungsklasseSaldoZeile implements GenericObject {
     this.buchungsart = null;
     this.text = text;
     this.text_buchungsart = null;
-    this.umbuchungen = new Double(umbuchungen);
-    this.einnahmen = new Double(einnahmen);
-    this.ausgaben = new Double(ausgaben);
+    this.umbuchungen = Double.valueOf(umbuchungen);
+    this.einnahmen = Double.valueOf(einnahmen);
+    this.ausgaben = Double.valueOf(ausgaben);
   }
 
   public BuchungsklasseSaldoZeile(int status, String text, Double gewinnverlust) {
@@ -107,7 +107,7 @@ public class BuchungsklasseSaldoZeile implements GenericObject {
     this.text = text;
     this.text_buchungsart = null;
     this.umbuchungen = null;
-    this.einnahmen = new Double(gewinnverlust);
+    this.einnahmen = Double.valueOf(gewinnverlust);
     this.ausgaben = null;
   }
 
@@ -130,8 +130,8 @@ public class BuchungsklasseSaldoZeile implements GenericObject {
     this.buchungsart = null;
     this.text = text;
     this.text_buchungsart = text_buchungsart;
-    this.einnahmen = new Double(einnahmen);
-    this.ausgaben = new Double(ausgaben);
+    this.einnahmen = Double.valueOf(einnahmen);
+    this.ausgaben = Double.valueOf(ausgaben);
     this.umbuchungen = null;
   }
 
